--- a/views/login.ejs
+++ b/views/login.ejs
@@ -84,7 +84,7 @@
 
       <div class="text-center px-6">
         <h1 class="text-xl font-bold mb-2">Login Account</h1>
-        <h2 class="text-sm text-gray-600 mb-6">Selamat datang di Acne Sense</h2>
+        <h2 class="text-sm text-gray-600 mb-6">Selamat Datang di Acne Sense</h2>
       </div>
 
       <div class="px-7 flex flex-col flex-grow">
@@ -169,7 +169,7 @@
           For Your Acne Solution
         </p>
         <p class="font-semibold mb-10 select-none text-lg">
-          Selamat Datang!<br />Silahkan Login Untuk Melanjutkan
+          Selamat Datang <br />Silahkan Login Untuk Melanjutkan
         </p>
 
         <!-- Form -->
