--- a/views/preview.ejs
+++ b/views/preview.ejs
@@ -291,7 +291,7 @@ async function startCheck() {
     console.log('Sending image data length:', capturedImageData.length);
 
     try {
-        const response = await fetch('http://localhost:5000/combined-diagnosis', {
+        const response = await fetch('<%= API_BASE_URL %>/combined-diagnosis', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
