--- a/views/templates/menu-desktop.ejs
+++ b/views/templates/menu-desktop.ejs
@@ -1,12 +1,14 @@
 <div
   class="w-1/2 flex flex-col space-y-6 rounded-l-2xl bg-[#FFFFFF] p-10 text-black"
 >
+<a href="dashboard">
   <header class="mb-8 pb-6 border-b border-gray-300">
     <h1 class="title-font mb-2 select-none text-3xl">
       Acne<span class="accent-green">Sense</span>
     </h1>
     <p class="sub-title-font select-none text-lg">For Your Acne Solution</p>
   </header>
+  </a>
 
   <button onclick="window.location.href='/deteksi'"
     aria-label="Foto dan deteksi sekarang"
