--- a/views/login.ejs
+++ b/views/login.ejs
@@ -134,7 +134,7 @@
             class="flex justify-between text-sm md:text-base text-gray-600 mb-10 select-none"
           >
             <a href="/register"><span>Registrasi?</span></a>
-            <a href=""><span>Lupa Password?</span></a>
+            <a href="/forgot-password"><span>Lupa Password?</span></a>
           </div>
 
           <button
@@ -219,7 +219,7 @@
             class="flex justify-between text-base text-gray-600 mb-10 select-none"
           >
             <a href="/register"><span>Registrasi?</span></a>
-            <a href=""><span>Lupa Password?</span></a>
+            <a href="/forgot-password"><span>Lupa Password?</span></a>
           </div>
 
           <button
