--- a/web/views/preview.ejs
+++ b/web/views/preview.ejs
@@ -299,8 +299,7 @@ async function startCheck() {
             body: JSON.stringify({
                 image: capturedImageData,
                 user_info: userInfo,
-                target_language: "id",
-                translation_method: "llm"
+                target_language: "id"
             })
         });
 
